// Copyright 2019 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package exonum.supervisor;

import "types.proto";
import "service.proto";
import "runtime.proto";
import "google/protobuf/empty.proto";

message ConfigProposalWithHash {
    exonum.crypto.Hash propose_hash = 1;
    ConfigPropose config_propose = 2;
}

// Reason for a deployment failure.
message DeployFailCause {
    oneof type {
        // Failure caused by deadline reaching.
        google.protobuf.Empty deadline = 1;
        // Failure caused by the execution error.
        exonum.runtime.ExecutionError error = 2;
    }
}

// Information about deploy failure.
message FailureInfo {
    // Height on which failure occurred.
    uint64 height = 1;
    // Reason for the failure.
    DeployFailCause cause = 2;
}

// Deployment state.
message DeployState {
    oneof type {
        // There was no such a deploy request.
        google.protobuf.Empty not_requested = 1;
        // Deploy is in process.
        google.protobuf.Empty pending = 2;
        // Deployment failed.
        FailureInfo failed = 3;
        // Deployment succeed.
        google.protobuf.Empty succeed = 4;
    }
}